# leadflow-ai

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml
demo/: run_demo.sh  seed_data.py
leadflow/: __init__.py  config.py  models.py  pipeline.py  registry.py
leadflow/destinations/: base.py  master_sheet.py  mock_writer.py  notion_writer.py  slack_notifier.py
leadflow/processing/: deduplicator.py  enricher.py  normalizer.py
leadflow/sources/: base.py  google_sheets.py  mock_source.py  notion_source.py
tests/: conftest.py  test_deduplicator.py  test_enricher.py  test_normalizer.py  test_notion_source.py  test_notion_writer.py  test_pipeline.py  test_registry.py
tests/fixtures/: duplicate_pairs.json  sample_leads.json
